--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react": "^16.4.4",
     "@types/react-dom": "^16.0.6",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "viewport-units-buggyfill": "^0.6.2"
   }
 }
